# WASMIsingMonteCarlo

./: Cargo.toml  Makefile  README.md  index.html
pkg/: package.json  wasm_monte_carlo.d.ts  wasm_monte_carlo.js  wasm_monte_carlo_bg.d.ts  wasm_monte_carlo_bg.wasm
src/: lib.rs
