[package]
name = "wasm_monte_carlo"
version = "2.1.0"
authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[dependencies]
wasm-bindgen = "^0.2"
rand = { version = "^0.7", features = ["wasm-bindgen"] }
console_error_panic_hook = "^0.1"

[dependencies.qmc]
version = "^2.1"
default-features = false

[dev-dependencies]
wasm-bindgen-test = "^0.3"